compiler/testData/diagnostics/tests/cyclicHierarchy/classInheritsNested.kt
// RUN_PIPELINE_TILL: FRONTEND
open class E : <!CYCLIC_INHERITANCE_HIERARCHY!>E.EE<!>() {
    open class EE
}

/* GENERATED_FIR_TAGS: classDeclaration, nestedClass */
